Atualizei a página de estilos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Cordel</title>
+    <title>Cordel Moderno</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
 </head>
@@ -20,7 +20,7 @@
             </p>
         </header>
         <section>
-            <p>
+            <p class="fundo-branco">
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
@@ -48,7 +48,7 @@
 
 
         <section>
-            <p>
+            <p class="fundo-branco">
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
                 Ponto final nem se usa <br>
@@ -57,8 +57,8 @@
                 Se o saite é muito bom <br>
                 Ele vale um alto preço.
             </p>
-            <br>
-            <p>
+            <p class="fundo-branco">
+
                 Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
                 Tem símbolo para tudo <br>
@@ -86,7 +86,8 @@
 
 
         <section>
-            <p>
+            <p class="fundo-branco">
+
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
                 Mas quando vou prosear <br>
@@ -95,8 +96,8 @@
                 O mundo ficou cativo <br>
                 Da tecnologia do agora.
             </p>
-            <br>
-            <p>
+            <p class="fundo-branco">
+
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
                 Deus escuta todo mundo <br>
